--- a/pages/templates/creatAcount.html
+++ b/pages/templates/creatAcount.html
@@ -14,6 +14,11 @@
                     <a href="{% url 'home'%}"><img class="iconLog" src="{% static 'imagens/CLOTHS ICON.png'%}" alt=""><br></a>
                 </div>
                 <h2> <b>CRIE SUA CONTA</b> </h2><br>
+                {% for message in messages %}
+                <div class="w-50 alert alert-danger">
+                    {{ message }}
+                </div>
+                {% endfor %}
                 <!-- FORMULARIO -->
                 <form action="" class="form-bt" method='POST'>
                     {% csrf_token %}
